influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__show_databases_statement.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"SHOW DATABASES\")"
---
- "pre_visit_statement: ShowDatabases(ShowDatabasesStatement)"
- "pre_visit_show_databases_statement: ShowDatabasesStatement"
- "post_visit_show_databases_statement: ShowDatabasesStatement"
- "post_visit_statement: ShowDatabases(ShowDatabasesStatement)"

