influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__show_field_keys_statement.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"SHOW FIELD KEYS\")"
---
- pre_visit_statement
- pre_visit_show_field_keys_statement
- post_visit_show_field_keys_statement
- post_visit_statement

